--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -9,13 +9,19 @@
       <div class="alert alert-danger" role="alert" *ngIf="errorMessage">{{errorMessage}}</div>
       <span id="reauth-email" class="reauth-email"></span>
       <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !fullName.valid }">
-        <label for="fullName">Full Name</label>
-        <input type="text" class="form-control" name="fullName" id="fullName" [(ngModel)]="user.fullName" #fullName="ngModel" required />
+        <label for="fullName">First Name</label>
+        <input type="text" class="form-control" name="fullName" id="fullName" [(ngModel)]="user.FirstName" #fullName="ngModel" required />
+        <div *ngIf="f.submitted && !fullName.valid" class="help-block">The full Name is required</div>
+      </div>
+
+      <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !fullName.valid }">
+        <label for="fullName">Last Name</label>
+        <input type="text" class="form-control" name="fullName" id="fullName" [(ngModel)]="user.LastName" #fullName="ngModel" required />
         <div *ngIf="f.submitted && !fullName.valid" class="help-block">The full Name is required</div>
       </div>
       <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !username.valid }">
         <label for="username">Email Address</label>
-        <input type="text" class="form-control" name="username" id="username" pattern="[^ @]*@[^ @]*" [(ngModel)]="user.username" #username="ngModel" required />
+        <input type="text" class="form-control" name="username" id="username" pattern="[^ @]*@[^ @]*" [(ngModel)]="user.UserName" #username="ngModel" required />
         <div *ngIf="f.submitted && !username.valid" class="help-block">
 
           <div *ngIf="username.errors.required">
@@ -29,7 +35,7 @@
       </div>
       <div class="form-group" [ngClass]="{ 'has-error': f.submitted && !password.valid }">
         <label for="password">Password</label>
-        <input type="password" class="form-control" name="password" id="password"[(ngModel)]="user.password" #password="ngModel" required minlength="4" />
+        <input type="password" class="form-control" name="password" id="password"[(ngModel)]="user.PassCode" #password="ngModel" required minlength="4" />
         <div *ngIf="f.submitted && !password.valid" class="help-block">
 
           <div *ngIf="password.errors.required">
