--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -70,3 +70,10 @@ body, html {
   background-image:none;
   padding: 0;
 }
+
+
+.dis-contact select{width:100%;padding:5px 7px;}
+#uploadNew table thead tr th:first-child,
+#uploadNew table tbody tr td:first-child{border-right:2px solid #ddd;}
+#uploadNew table thead tr th{padding-bottom: 5px !important;}
+#uploadNew .modal-dialog{width:800px;margin: 60px auto;}
