--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -212,7 +212,7 @@
                        <div class="img-grid">
                         <img src="../../../assets/images/f1.jpg" alt="Catchy Carz">
                         <div class="car_description">
-                           <h4><a href="single.html">Mercedes-Benz C250 CDI</a></h4>
+                           <h4><a href="single.html">Name</a></h4>
                            <div class="price"><span class="fa fa-rupee"></span><span class="font25">$ 8000 - $ 12000</span></div>
                            <p>Estimated Price</p>
                            <div class="date">Mar 2017</div>
@@ -575,35 +575,104 @@
 
 
 <!-- discounts-->
-<div class="modal ab" id="myModal1"  style="display:block"  *ngIf="uploadNew">
+<div class="modal ab" id="uploadNew"  style="display:block"  *ngIf="uploadNew">
   <div class="modal-dialog about" role="document">
     <div class="modal-content about">
       <div class="modal-header">
         <button type="button" class="close ab" data-dismiss="modal" aria-label="Close" (click)="uploadNewHide()"><span aria-hidden="true">&times;</span></button>
           <div class="discount">
-            <h3>Add New</h3>
+            <h3>Add New Card</h3>
               <form action="#" method="post">
                 <input type="file" name="fileupload" class="fileupload" placeholder="File Upload" required="">
+                <input type="submit" value="Scan Image">
               </form>
           </div>
       </div>
        <div class="modal-body about">
 
           <div class="dis-contact">
-            <h4>Contact Information</h4>
+            <h4>Scan Result</h4>
                 <form action="#" method="post">
-                  <input type="text" name="name" class="name active" placeholder="Name" required="">
-                  <input type="text" name="email" class="email" placeholder="Email" required="">
-                  <input type="text" name="phone" class="phone" placeholder="Phone" required="">
                   <div class="d-c">
-                    <span class="checkbox1">
-                      <label class="checkbox"><input type="checkbox" name="" checked=""><i> </i>I agree to Terms and Conditions.</label>
-                    </span>
+                    <table class="table table-sm">
+                      <thead>
+                        <tr>
+                          <th>&nbsp;</th>
+                          <th>Name</th>
+                          <th>Address</th>
+                          <th>City</th>
+                          <th>Country</th>
+                          <th>Contact</th>
+                          <th>E-mail</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td>Feched Result</td>
+                          <td>
+                            <select class="name active">
+                              <option>name1</option>
+                              <option>name1</option>
+                              <option>name1</option>
+                              <option>name1</option>
+                            </select>
+                          </td>
+                          <td>
+                            <select class="name active">
+                              <option>Address</option>
+                              <option>Address</option>
+                              <option>Address</option>
+                              <option>Address</option>
+                            </select>
+                          </td>
+                          <td>
+                            <select class="name active">
+                              <option>city</option>
+                              <option>city</option>
+                              <option>city</option>
+                              <option>city</option>
+                            </select>
+                          </td>
+                          <td>
+                            <select class="name active">
+                              <option>Country</option>
+                              <option>Country</option>
+                              <option>Country</option>
+                              <option>Country</option>
+                            </select>
+                          </td>
+                          <td><select class="name active">
+                            <option>contact</option>
+                            <option>contact</option>
+                            <option>contact</option>
+                            <option>contact</option>
+                          </select>
+                        </td>
+                          <td>
+                            <select class="name active">
+                              <option>email</option>
+                              <option>email</option>
+                              <option>email</option>
+                              <option>email</option>
+                            </select>
+                          </td>
+                        </tr>
+                        <tr>
+                          <td>Selected</td>
+                          <td></td>
+                          <td></td>
+                          <td></td>
+                          <td></td>
+                          <td></td>
+                          <td></td>
+                        </tr>
+                      </tbody>
+                    </table>
+
 
                   </div>
-                  <input type="submit" value="Find Offers">
-
-                  </form>
+                  <input type="submit" value="Save">
+                </form>
           </div>
        </div>
     </div>
