--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -76,4 +76,8 @@ body, html {
 #uploadNew table thead tr th:first-child,
 #uploadNew table tbody tr td:first-child{border-right:2px solid #ddd;}
 #uploadNew table thead tr th{padding-bottom: 5px !important;}
+#uploadNew table tbody tr td{text-align:left;}
 #uploadNew .modal-dialog{width:800px;margin: 60px auto;}
+
+.uploadSec{background: #f7f7f7;clear: both; height: 50px;padding:10px;}
+.discount h3{padding: 0;margin: 0;}
