--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -7335,3 +7335,7 @@ p.free {
   margin-left: 0em;
   float: left;
 }
+
+.p0{padding:0 !important;}
+.pr0{padding-right:0 !important;}
+.pl0{padding-left:0 !important;}
