--- a/src/app/components/profile/profile.component.css
+++ b/src/app/components/profile/profile.component.css
@@ -71,13 +71,20 @@ body, html {
   padding: 0;
 }
 
-
+#uploadNew .modal-body {float: left;}
 .dis-contact select{width:100%;padding:5px 7px;}
+#uploadNew table{height: 250px;}
+#uploadNew table tbody{position: absolute; height: 230px; overflow-y: scroll; width:98%;}
 #uploadNew table thead tr th:first-child,
-#uploadNew table tbody tr td:first-child{border-right:2px solid #ddd;}
+#uploadNew table tbody tr td:first-child{border-right:2px solid #ddd;text-align: center;}
 #uploadNew table thead tr th{padding-bottom: 5px !important;}
-#uploadNew table tbody tr td{text-align:left;}
-#uploadNew .modal-dialog{width:800px;margin: 60px auto;}
+#uploadNew table tbody tr td{text-align:left;padding: 5px !important;}
+#uploadNew table tbody tr td input{width:95%;}
+#uploadNew .modal-dialog{width:850px;margin: 50px auto;}
+#uploadNew .modal-footer{border-top:2px solid #ddd;clear: left;}
 
-.uploadSec{background: #f7f7f7;clear: both; height: 50px;padding:10px;}
+.uploadSec{background: #f7f7f7;clear: both;     height: 320px;padding:10px;}
+.uploadSec .imageSec{height: 266px;}
+.uploadSec .btnSec input{margin: 0 auto; display: block;}
 .discount h3{padding: 0;margin: 0;}
+.dis-contact h4 {font-size: 16px; font-weight: bold; margin: 0;}
