--- a/src/assets/css/zoomslider.css
+++ b/src/assets/css/zoomslider.css
@@ -27,7 +27,7 @@
 
 		}
 		.banner-info{
-			    padding:9% 0 0 0;
+			    padding:10% 0 0 0;
 			color: #fff;
 			text-align: center;
 		}
@@ -262,16 +262,17 @@
 	background: url(../images/rupee.png) no-repeat 2% center #ffffff;
 }
 .search-two seclect,select#country{
-    padding:10px 46px;
+    padding:10px 20px 10px 10px;
     width: 100%;
     font-weight: normal;
-    background: none;
+    background: #fff;
     border: none;
     color: #848484;
     outline: none;
     font-size:14px;
     margin-bottom:0;
-	background: url(../images/car.png) no-repeat 5% center #ffffff;
+    border-right: 2px solid #ddd;
+	/* background: url(../images/car.png) no-repeat 5% center #ffffff; */
 }
 input#searchMega{
     padding:8px 10px 10px 9px;
@@ -308,7 +309,7 @@ input#searchMega{
 }
 @media (max-width:1366px){
 	.banner-info {
-		padding: 7% 0 0 0;
+		padding: 10% 0 0 0;
 		color: #fff;
 		text-align: center;
 	}
@@ -354,15 +355,16 @@ input#searchMega{
 		margin: 2% auto 0;
 	}
 	.search-two seclect, select#country {
-		padding: 10px 34px;
+		padding: 10px 20px 10px 10px;
 		width: 100%;
 		font-weight: normal;
-		background: none;
+		background: #fff;
 		border: none;
 		color: #848484;
 		outline: none;
 		font-size: 12px;
-		margin-bottom: 0;
+    margin-bottom: 0;
+    border-right: 2px solid #ddd;
 		/* background: url(../images/car.png) no-repeat 6% center #ffffff; */
 	}
 	.section_room select {
