--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -7339,3 +7339,10 @@ p.free {
 .p0{padding:0 !important;}
 .pr0{padding-right:0 !important;}
 .pl0{padding-left:0 !important;}
+.elips{text-overflow: ellipsis; overflow: hidden; white-space: nowrap;}
+
+  /*Loader*/
+  .pageLoader {width:100%; height:100%; z-index:99990; left:0;top:0%;color:#cdcdcd; font-size:0.8em; text-align:center; position:fixed;  background:rgba(0,0,0,0.5);}
+  .pageLoaderContent{z-index:99991; left:46%; top:50%; position:absolute; overflow:hidden; padding:5px; background:#000; border-radius: 23px; -moz-border-radius: 23px; -webkit-border-radius: 23px; border: 0px solid #000000;}
+  .loaderImage{float:left; display:inline;}
+  .laderContent{float:left;margin:8px 2px 8px 5px; color:#fff; font-weight:300; font-size:13px;}
