--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -71,7 +71,7 @@
                     <div *ngIf="data.DESIGNATION=='' || data.DESIGNATION==null">N.A.</div>
                     <div class="elips" *ngIf="data.DESIGNATION!='' && data.DESIGNATION!=null">{{data.DESIGNATION}}</div>
                   </div>
-                  <div class="col-md-12 col-sm-12 addSec">
+                  <div class="col-md-12 col-sm-12 addSec addSecHeight">
                     <div class="col-md-3 col-sm-3 pull-left p0 addLeft">Address</div>
                     <div class="col-md-9 col-sm-9 pull-left pr0 addRight">{{data.ADDRESS}}</div>
                   </div>
